v5.3.1
- Updated - Site logo width on header template part
- Updated - CORE/Navigation - improved styleing for dropdowns
- Updated - CORE/Navigation - blockGap support
- Fixed - CORE/Navigation - temporary fix for the (hopefully temporary) issue with dropdown-item class for submenu

v5.3.0
- Updated - theme.json blockGap back to null (issues with 0 set on main block wrappers)
- Updated - Styles Extension: Move Gutenberg utilities to Styles extension
- Updated - Utilities now will generate own inline CSS / method to load any utility programatically
- Updated - Added couple more missing utilities
- Updated - JSON custom navbarBreakpoint to mobileBreakpoint rename (it is used on multiple places not just navbar)
- Updated - Markup::wrap error wording
- Updated - CF7 Support extension notification wording
- Updated - Prepare CORE/Navigation block for upcomming GB plugin update
- Updated - Local RO translations
- Fixed - Utilities responsive classes (generating wrong classnames for breakpoints)
- Fixed - Search post spacing issue - added post bottom margin
- Added - Opt out from the core colors and gradients

v5.2.9
- Updated - Placeholder from site url to "Placeholder" text
- Updated - Gutenberg styles extension to skip blocks with null blockName
- Updated - WP Social Links add blockGap CSS support
- Fixed - Latest Posts block double "list-unstyled" class

v5.2.8
- Updated - Pagination class updated to block-templates/template-parts to be picked up by Utilitiy feature
- Updated - Pagination to inherit button border radius
- Updated - Buttons selector to extend couple of other blocks buttons
- Updated - Minor updates to code structure (moved some code to its Gutenberg block)
- Updated - Sanitize link hover color output in global styles
- Updated - Gutenberg Styles extension: normalized hooks priorioty (20 for all hooks / 10 is for WP)
- Updated - Post featured image refactor/merge with Media class (from core) and style attributes will reflect on frontend