@@ -3,8 +3,8 @@
 <main class="wp-block-group py-5">
     <!-- wp:columns {"className":"flex-column flex-lg-row"} -->
     <div class="wp-block-columns flex-column flex-lg-row">
-        <!-- wp:column {"className":"col-12 col-lg"} -->
-        <div class="wp-block-column col-12 col-lg">
+        <!-- wp:column {"className":"col-12 col-lg-9"} -->
+        <div class="wp-block-column col-12 col-lg-9">
             <!-- wp:post-title /-->
             <!-- wp:post-content /-->
         </div>
