@@ -4,7 +4,7 @@
     <!-- wp:columns {"className":"flex-column flex-lg-row"} -->
     <div class="wp-block-columns flex-column flex-lg-row">
         <!-- wp:column {"className":"col-12 col-lg-9"} -->
-        <div class="wp-block-column col col-lg-9">
+        <div class="wp-block-column col-12 col-lg-9">
             <!-- wp:group {"tagName":"main","layout":{"inherit":false}} -->
             <main class="wp-block-group">
                 <!-- wp:post-featured-image {"height":"768px"} /-->
