@@ -3,6 +3,8 @@ v5.3.1
 - Updated - CORE/Navigation - improved styleing for dropdowns
 - Updated - CORE/Navigation - blockGap support
 - Fixed - CORE/Navigation - temporary fix for the (hopefully temporary) issue with dropdown-item class for submenu
+- Fixed - Content/Sidebar page template column class
+- Fixed - Single template column class to match attribute
 
 v5.3.0
 - Updated - theme.json blockGap back to null (issues with 0 set on main block wrappers)
